[Editorial] Add periods to stage directions

--- a/src/epub/text/act-1.xhtml
+++ b/src/epub/text/act-1.xhtml
@@ -22,7 +22,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter three <b epub:type="z3998:persona">Witches</b></i>
+								<i epub:type="z3998:stage-direction">Enter three <b epub:type="z3998:persona">Witches</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -79,7 +79,7 @@
 								<p>
 									<span>Fair is foul, and foul is fair:</span>
 									<br/>
-									<span>Hover through the fog and filthy air. <i epub:type="z3998:stage-direction">Exeunt</i></span>
+									<span>Hover through the fog and filthy air. <i epub:type="z3998:stage-direction">Exeunt.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -97,7 +97,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Alarum within. Enter <b epub:type="z3998:persona">DUNCAN</b>, <b epub:type="z3998:persona">MALCOLM</b>, <b epub:type="z3998:persona">DONALBAIN</b>, <b epub:type="z3998:persona">LENNOX</b>, with Attendants, meeting a bleeding <b epub:type="z3998:persona">Sergeant</b></i>
+								<i epub:type="z3998:stage-direction">Alarum within. Enter <b epub:type="z3998:persona">DUNCAN</b>, <b epub:type="z3998:persona">MALCOLM</b>, <b epub:type="z3998:persona">DONALBAIN</b>, <b epub:type="z3998:persona">LENNOX</b>, with Attendants, meeting a bleeding <b epub:type="z3998:persona">Sergeant</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -236,7 +236,7 @@
 								<p>
 									<span>So well thy words become thee as thy wounds;</span>
 									<br/>
-									<span>They smack of honour both. Go get him surgeons. <i epub:type="z3998:stage-direction">Exit <b epub:type="z3998:persona">Sergeant</b>, attended</i></span>
+									<span>They smack of honour both. Go get him surgeons. <i epub:type="z3998:stage-direction">Exit <b epub:type="z3998:persona">Sergeant</b>, attended.</i></span>
 									<br/>
 									<span>Who comes here?</span>
 								</p>
@@ -245,7 +245,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">ROSS</b></i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">ROSS</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -336,7 +336,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">DUNCAN</td>
-							<td>What he hath lost noble Macbeth hath won. <i epub:type="z3998:stage-direction">Exeunt</i></td>
+							<td>What he hath lost noble Macbeth hath won. <i epub:type="z3998:stage-direction">Exeunt.</i></td>
 						</tr>
 					</tbody>
 				</table>
@@ -352,7 +352,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Thunder. Enter the three <b epub:type="z3998:persona">Witches</b></i>
+								<i epub:type="z3998:stage-direction">Thunder. Enter the three <b epub:type="z3998:persona">Witches</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -443,7 +443,7 @@
 								<p>
 									<span>Here I have a pilot's thumb,</span>
 									<br/>
-									<span>Wreck'd as homeward he did come. <i epub:type="z3998:stage-direction">Drum within</i></span>
+									<span>Wreck'd as homeward he did come. <i epub:type="z3998:stage-direction">Drum within.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -478,7 +478,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACBETH</b> and <b epub:type="z3998:persona">BANQUO</b></i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACBETH</b> and <b epub:type="z3998:persona">BANQUO</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -607,7 +607,7 @@
 									<br/>
 									<span>Upon this blasted heath you stop our way</span>
 									<br/>
-									<span>With such prophetic greeting? Speak, I charge you. <i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">Witches</b> vanish</i></span>
+									<span>With such prophetic greeting? Speak, I charge you. <i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">Witches</b> vanish.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -662,7 +662,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">ROSS</b> and <b epub:type="z3998:persona">ANGUS</b></i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">ROSS</b> and <b epub:type="z3998:persona">ANGUS</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -763,11 +763,11 @@
 							<td epub:type="z3998:persona">MACBETH</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span><i epub:type="z3998:stage-direction">Aside</i> Glamis, and thane of Cawdor!</span>
+									<span><i epub:type="z3998:stage-direction">Aside.</i> Glamis, and thane of Cawdor!</span>
 									<br/>
-									<span>The greatest is behind. <i epub:type="z3998:stage-direction">To <b epub:type="z3998:persona">ROSS</b> and <b epub:type="z3998:persona">ANGUS</b></i></span>
+									<span>The greatest is behind. <i epub:type="z3998:stage-direction">To <b epub:type="z3998:persona">ROSS</b> and <b epub:type="z3998:persona">ANGUS</b>.</i></span>
 									<br/>
-									<span>Thanks for your pains. <i epub:type="z3998:stage-direction">To <b epub:type="z3998:persona">BANQUO</b></i></span>
+									<span>Thanks for your pains. <i epub:type="z3998:stage-direction">To <b epub:type="z3998:persona">BANQUO</b>.</i></span>
 									<br/>
 									<span>Do you not hope your children shall be kings,</span>
 									<br/>
@@ -803,11 +803,11 @@
 							<td epub:type="z3998:persona">MACBETH</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span><i epub:type="z3998:stage-direction">Aside</i> Two truths are told,</span>
+									<span><i epub:type="z3998:stage-direction">Aside.</i> Two truths are told,</span>
 									<br/>
 									<span>As happy prologues to the swelling act</span>
 									<br/>
-									<span>Of the imperial theme.--I thank you, gentlemen. <i epub:type="z3998:stage-direction">Aside</i></span>
+									<span>Of the imperial theme.--I thank you, gentlemen. <i epub:type="z3998:stage-direction">Aside.</i></span>
 									<br/>
 									<span>Cannot be ill, cannot be good: if ill,</span>
 									<br/>
@@ -843,7 +843,7 @@
 							<td epub:type="z3998:persona">MACBETH</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span><i epub:type="z3998:stage-direction">Aside</i> If chance will have me king, why, chance may crown me,</span>
+									<span><i epub:type="z3998:stage-direction">Aside.</i> If chance will have me king, why, chance may crown me,</span>
 									<br/>
 									<span>Without my stir.</span>
 								</p>
@@ -865,7 +865,7 @@
 							<td epub:type="z3998:persona">MACBETH</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span><i epub:type="z3998:stage-direction">Aside</i> Come what come may,</span>
+									<span><i epub:type="z3998:stage-direction">Aside.</i> Come what come may,</span>
 									<br/>
 									<span>Time and the hour runs through the roughest day.</span>
 								</p>
@@ -901,7 +901,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">MACBETH</td>
-							<td>Till then, enough. Come, friends. <i epub:type="z3998:stage-direction">Exeunt</i></td>
+							<td>Till then, enough. Come, friends. <i epub:type="z3998:stage-direction">Exeunt.</i></td>
 						</tr>
 					</tbody>
 				</table>
@@ -917,7 +917,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Flourish. Enter <b epub:type="z3998:persona">DUNCAN</b>, <b epub:type="z3998:persona">MALCOLM</b>, <b epub:type="z3998:persona">DONALBAIN</b>, <b epub:type="z3998:persona">LENNOX</b>, and Attendants</i>
+								<i epub:type="z3998:stage-direction">Flourish. Enter <b epub:type="z3998:persona">DUNCAN</b>, <b epub:type="z3998:persona">MALCOLM</b>, <b epub:type="z3998:persona">DONALBAIN</b>, <b epub:type="z3998:persona">LENNOX</b>, and Attendants.</i>
 							</td>
 						</tr>
 						<tr>
@@ -973,7 +973,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACBETH</b>, <b epub:type="z3998:persona">BANQUO</b>, <b epub:type="z3998:persona">ROSS</b>, and <b epub:type="z3998:persona">ANGUS</b></i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACBETH</b>, <b epub:type="z3998:persona">BANQUO</b>, <b epub:type="z3998:persona">ROSS</b>, and <b epub:type="z3998:persona">ANGUS</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1094,7 +1094,7 @@
 							<td epub:type="z3998:persona">MACBETH</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span><i epub:type="z3998:stage-direction">Aside</i> The Prince of Cumberland! that is a step</span>
+									<span><i epub:type="z3998:stage-direction">Aside.</i> The Prince of Cumberland! that is a step</span>
 									<br/>
 									<span>On which I must fall down, or else o'erleap,</span>
 									<br/>
@@ -1104,7 +1104,7 @@
 									<br/>
 									<span>The eye wink at the hand; yet let that be,</span>
 									<br/>
-									<span>Which the eye fears, when it is done, to see. <i epub:type="z3998:stage-direction">Exit</i></span>
+									<span>Which the eye fears, when it is done, to see. <i epub:type="z3998:stage-direction">Exit.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -1120,7 +1120,7 @@
 									<br/>
 									<span>Whose care is gone before to bid us welcome:</span>
 									<br/>
-									<span>It is a peerless kinsman. <i epub:type="z3998:stage-direction">Flourish. Exeunt</i></span>
+									<span>It is a peerless kinsman. <i epub:type="z3998:stage-direction">Flourish. Exeunt.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -1138,7 +1138,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">LADY MACBETH</b>, reading a letter</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">LADY MACBETH</b>, reading a letter.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1210,7 +1210,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter a <b epub:type="z3998:persona">Messenger</b></i>
+								<i epub:type="z3998:stage-direction">Enter a <b epub:type="z3998:persona">Messenger</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1253,7 +1253,7 @@
 								<p>
 									<span>Give him tending;</span>
 									<br/>
-									<span>He brings great news. <i epub:type="z3998:stage-direction">Exit <b epub:type="z3998:persona">Messenger</b></i></span>
+									<span>He brings great news. <i epub:type="z3998:stage-direction">Exit <b epub:type="z3998:persona">Messenger</b>.</i></span>
 									<br/>
 									<span>The raven himself is hoarse</span>
 									<br/>
@@ -1294,7 +1294,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACBETH</b></i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACBETH</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1371,7 +1371,7 @@
 									<br/>
 									<span>To alter favour ever is to fear:</span>
 									<br/>
-									<span>Leave all the rest to me. <i epub:type="z3998:stage-direction">Exeunt</i></span>
+									<span>Leave all the rest to me. <i epub:type="z3998:stage-direction">Exeunt.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -1389,7 +1389,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Hautboys and torches. Enter <b epub:type="z3998:persona">DUNCAN</b>, <b epub:type="z3998:persona">MALCOLM</b>, <b epub:type="z3998:persona">DONALBAIN</b>, <b epub:type="z3998:persona">BANQUO</b>, <b epub:type="z3998:persona">LENNOX</b>, <b epub:type="z3998:persona">MACDUFF</b>, <b epub:type="z3998:persona">ROSS</b>, <b epub:type="z3998:persona">ANGUS</b>, and Attendants</i>
+								<i epub:type="z3998:stage-direction">Hautboys and torches. Enter <b epub:type="z3998:persona">DUNCAN</b>, <b epub:type="z3998:persona">MALCOLM</b>, <b epub:type="z3998:persona">DONALBAIN</b>, <b epub:type="z3998:persona">BANQUO</b>, <b epub:type="z3998:persona">LENNOX</b>, <b epub:type="z3998:persona">MACDUFF</b>, <b epub:type="z3998:persona">ROSS</b>, <b epub:type="z3998:persona">ANGUS</b>, and Attendants.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1429,7 +1429,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">LADY MACBETH</b></i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">LADY MACBETH</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1510,7 +1510,7 @@
 									<br/>
 									<span>And shall continue our graces towards him.</span>
 									<br/>
-									<span>By your leave, hostess. <i epub:type="z3998:stage-direction">Exeunt</i></span>
+									<span>By your leave, hostess. <i epub:type="z3998:stage-direction">Exeunt.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -1528,7 +1528,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Hautboys and torches. Enter a Sewer, and divers Servants with dishes and service, and pass over the stage. Then enter <b epub:type="z3998:persona">MACBETH</b></i>
+								<i epub:type="z3998:stage-direction">Hautboys and torches. Enter a Sewer, and divers Servants with dishes and service, and pass over the stage. Then enter <b epub:type="z3998:persona">MACBETH</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1596,7 +1596,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">LADY MACBETH</b></i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">LADY MACBETH</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1781,7 +1781,7 @@
 									<br/>
 									<span>Away, and mock the time with fairest show:</span>
 									<br/>
-									<span>False face must hide what the false heart doth know. <i epub:type="z3998:stage-direction">Exeunt</i></span>
+									<span>False face must hide what the false heart doth know. <i epub:type="z3998:stage-direction">Exeunt.</i></span>
 								</p>
 							</td>
 						</tr>
