--- a/src/epub/text/act-2.xhtml
+++ b/src/epub/text/act-2.xhtml
@@ -22,7 +22,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">BANQUO</b>, and <b epub:type="z3998:persona">FLEANCE</b> bearing a torch before him</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">BANQUO</b>, and <b epub:type="z3998:persona">FLEANCE</b> bearing a torch before him.</i>
 							</td>
 						</tr>
 						<tr>
@@ -62,7 +62,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACBETH</b>, and a Servant with a torch</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACBETH</b>, and a Servant with a torch.</i>
 							</td>
 						</tr>
 						<tr>
@@ -169,7 +169,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">BANQUO</td>
-							<td>Thanks, sir: the like to you! <i epub:type="z3998:stage-direction">Exeunt <b epub:type="z3998:persona">BANQUO</b> and <b epub:type="z3998:persona">FLEANCE</b></i></td>
+							<td>Thanks, sir: the like to you! <i epub:type="z3998:stage-direction">Exeunt <b epub:type="z3998:persona">BANQUO</b> and <b epub:type="z3998:persona">FLEANCE</b>.</i></td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">MACBETH</td>
@@ -177,7 +177,7 @@
 								<p>
 									<span>Go bid thy mistress, when my drink is ready,</span>
 									<br/>
-									<span>She strike upon the bell. Get thee to bed. <i epub:type="z3998:stage-direction">Exit Servant</i></span>
+									<span>She strike upon the bell. Get thee to bed. <i epub:type="z3998:stage-direction">Exit Servant.</i></span>
 									<br/>
 									<span>Is this a dagger which I see before me,</span>
 									<br/>
@@ -235,13 +235,13 @@
 									<br/>
 									<span>Which now suits with it. Whiles I threat, he lives:</span>
 									<br/>
-									<span>Words to the heat of deeds too cold breath gives. <i epub:type="z3998:stage-direction">A bell rings</i></span>
+									<span>Words to the heat of deeds too cold breath gives. <i epub:type="z3998:stage-direction">A bell rings.</i></span>
 									<br/>
 									<span>I go, and it is done; the bell invites me.</span>
 									<br/>
 									<span>Hear it not, Duncan; for it is a knell</span>
 									<br/>
-									<span>That summons thee to heaven or to hell. <i epub:type="z3998:stage-direction">Exit</i></span>
+									<span>That summons thee to heaven or to hell. <i epub:type="z3998:stage-direction">Exit.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -259,7 +259,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">LADY MACBETH</b></i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">LADY MACBETH</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -290,7 +290,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">MACBETH</td>
-							<td><i epub:type="z3998:stage-direction">Within</i> Who's there? what, ho!</td>
+							<td><i epub:type="z3998:stage-direction">Within.</i> Who's there? what, ho!</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">LADY MACBETH</td>
@@ -311,7 +311,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACBETH</b></i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACBETH</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -364,7 +364,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">MACBETH</td>
-							<td>This is a sorry sight. <i epub:type="z3998:stage-direction">Looking on his hands</i></td>
+							<td>This is a sorry sight. <i epub:type="z3998:stage-direction">Looking on his hands.</i></td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">LADY MACBETH</td>
@@ -510,7 +510,7 @@
 									<br/>
 									<span>I'll gild the faces of the grooms withal;</span>
 									<br/>
-									<span>For it must seem their guilt. <i epub:type="z3998:stage-direction">Exit. Knocking within</i></span>
+									<span>For it must seem their guilt. <i epub:type="z3998:stage-direction">Exit. Knocking within.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -537,7 +537,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Re-enter <b epub:type="z3998:persona">LADY MACBETH</b></i>
+								<i epub:type="z3998:stage-direction">Re-enter <b epub:type="z3998:persona">LADY MACBETH</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -546,7 +546,7 @@
 								<p>
 									<span>My hands are of your colour; but I shame</span>
 									<br/>
-									<span>To wear a heart so white. <i epub:type="z3998:stage-direction">Knocking within</i> I hear a knocking</span>
+									<span>To wear a heart so white. <i epub:type="z3998:stage-direction">Knocking within.</i> I hear a knocking</span>
 									<br/>
 									<span>At the south entry: retire we to our chamber;</span>
 									<br/>
@@ -554,7 +554,7 @@
 									<br/>
 									<span>How easy is it, then! Your constancy</span>
 									<br/>
-									<span>Hath left you unattended. <i epub:type="z3998:stage-direction">Knocking within</i> Hark! more knocking.</span>
+									<span>Hath left you unattended. <i epub:type="z3998:stage-direction">Knocking within.</i> Hark! more knocking.</span>
 									<br/>
 									<span>Get on your nightgown, lest occasion call us,</span>
 									<br/>
@@ -568,9 +568,9 @@
 							<td epub:type="z3998:persona">MACBETH</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>To know my deed, 'twere best not know myself. <i epub:type="z3998:stage-direction">Knocking within</i></span>
+									<span>To know my deed, 'twere best not know myself. <i epub:type="z3998:stage-direction">Knocking within.</i></span>
 									<br/>
-									<span>Wake Duncan with thy knocking! I would thou couldst! <i epub:type="z3998:stage-direction">Exeunt</i></span>
+									<span>Wake Duncan with thy knocking! I would thou couldst! <i epub:type="z3998:stage-direction">Exeunt.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -588,17 +588,17 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Knocking within. Enter a Porter</i>
+								<i epub:type="z3998:stage-direction">Knocking within. Enter a Porter.</i>
 							</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Porter</td>
-							<td>Here's a knocking indeed! If a man were porter of hell-gate, he should have old turning the key. <i epub:type="z3998:stage-direction">Knocking within</i> Knock, knock, knock! Who's there, i' the name of Beelzebub? Here's a farmer, that hanged himself on the expectation of plenty: come in time; have napkins enow about you; here you'll sweat for't. <i epub:type="z3998:stage-direction">Knocking within</i> Knock, knock! Who's there, in the other devil's name? Faith, here's an equivocator, that could swear in both the scales against either scale; who committed treason enough for God's sake, yet could not equivocate to heaven: O, come in, equivocator. <i epub:type="z3998:stage-direction">Knocking within</i> Knock, knock, knock! Who's there? Faith, here's an English tailor come hither, for stealing out of a French hose: come in, tailor; here you may roast your goose. <i epub:type="z3998:stage-direction">Knocking within</i> Knock, knock; never at quiet! What are you? But this place is too cold for hell. I'll devil-porter it no further: I had thought to have let in some of all professions that go the primrose way to the everlasting bonfire. <i epub:type="z3998:stage-direction">Knocking within</i> Anon, anon! I pray you, remember the porter. <i epub:type="z3998:stage-direction">Opens the gate</i></td>
+							<td>Here's a knocking indeed! If a man were porter of hell-gate, he should have old turning the key. <i epub:type="z3998:stage-direction">Knocking within.</i> Knock, knock, knock! Who's there, i' the name of Beelzebub? Here's a farmer, that hanged himself on the expectation of plenty: come in time; have napkins enow about you; here you'll sweat for't. <i epub:type="z3998:stage-direction">Knocking within.</i> Knock, knock! Who's there, in the other devil's name? Faith, here's an equivocator, that could swear in both the scales against either scale; who committed treason enough for God's sake, yet could not equivocate to heaven: O, come in, equivocator. <i epub:type="z3998:stage-direction">Knocking within.</i> Knock, knock, knock! Who's there? Faith, here's an English tailor come hither, for stealing out of a French hose: come in, tailor; here you may roast your goose. <i epub:type="z3998:stage-direction">Knocking within.</i> Knock, knock; never at quiet! What are you? But this place is too cold for hell. I'll devil-porter it no further: I had thought to have let in some of all professions that go the primrose way to the everlasting bonfire. <i epub:type="z3998:stage-direction">Knocking within.</i> Anon, anon! I pray you, remember the porter. <i epub:type="z3998:stage-direction">Opens the gate.</i></td>
 						</tr>
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACDUFF</b> and <b epub:type="z3998:persona">LENNOX</b></i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACDUFF</b> and <b epub:type="z3998:persona">LENNOX</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -660,7 +660,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACBETH</b></i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACBETH</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -723,7 +723,7 @@
 								<p>
 									<span>I'll make so bold to call,</span>
 									<br/>
-									<span>For 'tis my limited service. <i epub:type="z3998:stage-direction">Exit</i></span>
+									<span>For 'tis my limited service. <i epub:type="z3998:stage-direction">Exit.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -774,7 +774,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Re-enter <b epub:type="z3998:persona">MACDUFF</b></i>
+								<i epub:type="z3998:stage-direction">Re-enter <b epub:type="z3998:persona">MACDUFF</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -821,7 +821,7 @@
 									<br/>
 									<span>With a new Gorgon: do not bid me speak;</span>
 									<br/>
-									<span>See, and then speak yourselves. <i epub:type="z3998:stage-direction">Exeunt <b epub:type="z3998:persona">MACBETH</b> and <b epub:type="z3998:persona">LENNOX</b></i> Awake, awake!</span>
+									<span>See, and then speak yourselves. <i epub:type="z3998:stage-direction">Exeunt <b epub:type="z3998:persona">MACBETH</b> and <b epub:type="z3998:persona">LENNOX</b>.</i> Awake, awake!</span>
 									<br/>
 									<span>Ring the alarum-bell. Murder and treason!</span>
 									<br/>
@@ -835,14 +835,14 @@
 									<br/>
 									<span>As from your graves rise up, and walk like sprites,</span>
 									<br/>
-									<span>To countenance this horror! Ring the bell. <i epub:type="z3998:stage-direction">Bell rings</i></span>
+									<span>To countenance this horror! Ring the bell. <i epub:type="z3998:stage-direction">Bell rings.</i></span>
 								</p>
 							</td>
 						</tr>
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">LADY MACBETH</b></i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">LADY MACBETH</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -874,7 +874,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">BANQUO</b></i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">BANQUO</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -912,7 +912,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Re-enter <b epub:type="z3998:persona">MACBETH</b> and <b epub:type="z3998:persona">LENNOX</b>, with <b epub:type="z3998:persona">ROSS</b></i>
+								<i epub:type="z3998:stage-direction">Re-enter <b epub:type="z3998:persona">MACBETH</b> and <b epub:type="z3998:persona">LENNOX</b>, with <b epub:type="z3998:persona">ROSS</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -936,7 +936,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MALCOLM</b> and <b epub:type="z3998:persona">DONALBAIN</b></i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MALCOLM</b> and <b epub:type="z3998:persona">DONALBAIN</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1035,7 +1035,7 @@
 							<td epub:type="z3998:persona">MALCOLM</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span><i epub:type="z3998:stage-direction">Aside to <b epub:type="z3998:persona">DONALBAIN</b></i> Why do we hold our tongues,</span>
+									<span><i epub:type="z3998:stage-direction">Aside to <b epub:type="z3998:persona">DONALBAIN</b>.</i> Why do we hold our tongues,</span>
 									<br/>
 									<span>That most may claim this argument for ours?</span>
 								</p>
@@ -1045,7 +1045,7 @@
 							<td epub:type="z3998:persona">DONALBAIN</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span><i epub:type="z3998:stage-direction">Aside to <b epub:type="z3998:persona">MALCOLM</b></i> What should be spoken here,</span>
+									<span><i epub:type="z3998:stage-direction">Aside to <b epub:type="z3998:persona">MALCOLM</b>.</i> What should be spoken here,</span>
 									<br/>
 									<span>where our fate,</span>
 									<br/>
@@ -1061,7 +1061,7 @@
 							<td epub:type="z3998:persona">MALCOLM</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span><i epub:type="z3998:stage-direction">Aside to <b epub:type="z3998:persona">DONALBAIN</b></i> Nor our strong sorrow</span>
+									<span><i epub:type="z3998:stage-direction">Aside to <b epub:type="z3998:persona">DONALBAIN</b>.</i> Nor our strong sorrow</span>
 									<br/>
 									<span>Upon the foot of motion.</span>
 								</p>
@@ -1071,7 +1071,7 @@
 							<td epub:type="z3998:persona">BANQUO</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>Look to the lady: <i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">LADY MACBETH</b> is carried out</i> And when we have our naked frailties hid,</span>
+									<span>Look to the lady: <i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">LADY MACBETH</b> is carried out.</i> And when we have our naked frailties hid,</span>
 									<br/>
 									<span>That suffer in exposure, let us meet,</span>
 									<br/>
@@ -1107,7 +1107,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">ALL</td>
-							<td>Well contented. <i epub:type="z3998:stage-direction">Exeunt all but <b epub:type="z3998:persona">Malcolm</b> and <b epub:type="z3998:persona">Donalbain</b>.</i></td>
+							<td>Well contented. <i epub:type="z3998:stage-direction">Exeunt all but <b epub:type="z3998:persona">Malcolm</b> and <b epub:type="z3998:persona">Donalbain</b>..</i></td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">MALCOLM</td>
@@ -1149,7 +1149,7 @@
 									<br/>
 									<span>But shift away: there's warrant in that theft</span>
 									<br/>
-									<span>Which steals itself, when there's no mercy left. <i epub:type="z3998:stage-direction">Exeunt</i></span>
+									<span>Which steals itself, when there's no mercy left. <i epub:type="z3998:stage-direction">Exeunt.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -1167,7 +1167,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">ROSS</b> and an <b epub:type="z3998:persona">old Man</b></i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">ROSS</b> and an <b epub:type="z3998:persona">old Man</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1251,7 +1251,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACDUFF</b></i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACDUFF</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1366,7 +1366,7 @@
 								<p>
 									<span>God's benison go with you; and with those</span>
 									<br/>
-									<span>That would make good of bad, and friends of foes! <i epub:type="z3998:stage-direction">Exeunt</i></span>
+									<span>That would make good of bad, and friends of foes! <i epub:type="z3998:stage-direction">Exeunt.</i></span>
 								</p>
 							</td>
 						</tr>
