--- a/src/epub/text/act-4.xhtml
+++ b/src/epub/text/act-4.xhtml
@@ -22,7 +22,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Thunder. Enter the three <b epub:type="z3998:persona">Witches</b></i>
+								<i epub:type="z3998:stage-direction">Thunder. Enter the three <b epub:type="z3998:persona">Witches</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -152,7 +152,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">HECATE</b> to the other three <b epub:type="z3998:persona">Witches</b></i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">HECATE</b> to the other three <b epub:type="z3998:persona">Witches</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -167,14 +167,14 @@
 									<br/>
 									<span>Live elves and fairies in a ring,</span>
 									<br/>
-									<span>Enchanting all that you put in. <i epub:type="z3998:stage-direction">Music and a song: 'Black spirits,' etc</i></span>
+									<span>Enchanting all that you put in. <i epub:type="z3998:stage-direction">Music and a song: 'Black spirits,' etc.</i></span>
 								</p>
 							</td>
 						</tr>
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">HECATE</b> retires</i>
+								<i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">HECATE</b> retires.</i>
 							</td>
 						</tr>
 						<tr>
@@ -194,7 +194,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACBETH</b></i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACBETH</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -294,7 +294,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Thunder. <b epub:type="z3998:persona">First Apparition</b>: an armed Head</i>
+								<i epub:type="z3998:stage-direction">Thunder. <b epub:type="z3998:persona">First Apparition</b>: an armed Head.</i>
 							</td>
 						</tr>
 						<tr>
@@ -317,7 +317,7 @@
 								<p>
 									<span>Macbeth! Macbeth! Macbeth! beware Macduff;</span>
 									<br/>
-									<span>Beware the thane of Fife. Dismiss me. Enough. <i epub:type="z3998:stage-direction">Descends</i></span>
+									<span>Beware the thane of Fife. Dismiss me. Enough. <i epub:type="z3998:stage-direction">Descends.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -344,7 +344,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Thunder. <b epub:type="z3998:persona">Second Apparition</b>: A bloody Child</i>
+								<i epub:type="z3998:stage-direction">Thunder. <b epub:type="z3998:persona">Second Apparition</b>: A bloody Child.</i>
 							</td>
 						</tr>
 						<tr>
@@ -363,7 +363,7 @@
 									<br/>
 									<span>The power of man, for none of woman born</span>
 									<br/>
-									<span>Shall harm Macbeth. <i epub:type="z3998:stage-direction">Descends</i></span>
+									<span>Shall harm Macbeth. <i epub:type="z3998:stage-direction">Descends.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -386,7 +386,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Thunder. <b epub:type="z3998:persona">Third Apparition</b>: a Child crowned, with a tree in his hand</i>
+								<i epub:type="z3998:stage-direction">Thunder. <b epub:type="z3998:persona">Third Apparition</b>: a Child crowned, with a tree in his hand.</i>
 							</td>
 						</tr>
 						<tr>
@@ -419,7 +419,7 @@
 									<br/>
 									<span>Great Birnam wood to high Dunsinane hill</span>
 									<br/>
-									<span>Shall come against him. <i epub:type="z3998:stage-direction">Descends</i></span>
+									<span>Shall come against him. <i epub:type="z3998:stage-direction">Descends.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -461,7 +461,7 @@
 									<br/>
 									<span>And an eternal curse fall on you! Let me know.</span>
 									<br/>
-									<span>Why sinks that cauldron? and what noise is this? <i epub:type="z3998:stage-direction">Hautboys</i></span>
+									<span>Why sinks that cauldron? and what noise is this? <i epub:type="z3998:stage-direction">Hautboys.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -490,7 +490,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">A show of Eight Kings, the last with a glass in his hand; <b epub:type="z3998:persona">GHOST OF BANQUO</b> following</i>
+								<i epub:type="z3998:stage-direction">A show of Eight Kings, the last with a glass in his hand; <b epub:type="z3998:persona">GHOST OF BANQUO</b> following.</i>
 							</td>
 						</tr>
 						<tr>
@@ -521,7 +521,7 @@
 									<br/>
 									<span>For the blood-bolter'd Banquo smiles upon me,</span>
 									<br/>
-									<span>And points at them for his. <i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">Apparitions</b> vanish</i> What, is this so?</span>
+									<span>And points at them for his. <i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">Apparitions</b> vanish.</i> What, is this so?</span>
 								</p>
 							</td>
 						</tr>
@@ -550,7 +550,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Music. The <b epub:type="z3998:persona">witches</b> dance and then vanish, with <b epub:type="z3998:persona">HECATE</b></i>
+								<i epub:type="z3998:stage-direction">Music. The <b epub:type="z3998:persona">witches</b> dance and then vanish, with <b epub:type="z3998:persona">HECATE</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -568,7 +568,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">LENNOX</b></i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">LENNOX</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -649,7 +649,7 @@
 									<br/>
 									<span>But no more sights!--Where are these gentlemen?</span>
 									<br/>
-									<span>Come, bring me where they are. <i epub:type="z3998:stage-direction">Exeunt</i></span>
+									<span>Come, bring me where they are. <i epub:type="z3998:stage-direction">Exeunt.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -667,7 +667,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">LADY MACDUFF</b>, her Son, and <b epub:type="z3998:persona">ROSS</b></i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">LADY MACDUFF</b>, her Son, and <b epub:type="z3998:persona">ROSS</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -770,7 +770,7 @@
 									<br/>
 									<span>It would be my disgrace and your discomfort:</span>
 									<br/>
-									<span>I take my leave at once. <i epub:type="z3998:stage-direction">Exit</i></span>
+									<span>I take my leave at once. <i epub:type="z3998:stage-direction">Exit.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -907,7 +907,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter a <b epub:type="z3998:persona">Messenger</b></i>
+								<i epub:type="z3998:stage-direction">Enter a <b epub:type="z3998:persona">Messenger</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -930,7 +930,7 @@
 									<br/>
 									<span>Which is too nigh your person. Heaven preserve you!</span>
 									<br/>
-									<span>I dare abide no longer. <i epub:type="z3998:stage-direction">Exit</i></span>
+									<span>I dare abide no longer. <i epub:type="z3998:stage-direction">Exit.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -957,7 +957,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">Murderers</b></i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">Murderers</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -988,7 +988,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">First Murderer</td>
-							<td>What, you egg! <i epub:type="z3998:stage-direction">Stabbing him</i> Young fry of treachery!</td>
+							<td>What, you egg! <i epub:type="z3998:stage-direction">Stabbing him.</i> Young fry of treachery!</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Son</td>
@@ -996,14 +996,14 @@
 								<p>
 									<span>He has kill'd me, mother:</span>
 									<br/>
-									<span>Run away, I pray you! <i epub:type="z3998:stage-direction">Dies</i></span>
+									<span>Run away, I pray you! <i epub:type="z3998:stage-direction">Dies.</i></span>
 								</p>
 							</td>
 						</tr>
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Exit <b epub:type="z3998:persona">LADY MACDUFF</b>, crying 'Murder!' Exeunt <b epub:type="z3998:persona">Murderers</b>, following her</i>
+								<i epub:type="z3998:stage-direction">Exit <b epub:type="z3998:persona">LADY MACDUFF</b>, crying 'Murder!' Exeunt <b epub:type="z3998:persona">Murderers</b>, following her.</i>
 							</td>
 						</tr>
 					</tbody>
@@ -1020,7 +1020,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MALCOLM</b> and <b epub:type="z3998:persona">MACDUFF</b></i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MALCOLM</b> and <b epub:type="z3998:persona">MACDUFF</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1456,7 +1456,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter a <b epub:type="z3998:persona">Doctor</b></i>
+								<i epub:type="z3998:stage-direction">Enter a <b epub:type="z3998:persona">Doctor</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1481,7 +1481,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">MALCOLM</td>
-							<td>I thank you, doctor. <i epub:type="z3998:stage-direction">Exit <b epub:type="z3998:persona">Doctor</b></i></td>
+							<td>I thank you, doctor. <i epub:type="z3998:stage-direction">Exit <b epub:type="z3998:persona">Doctor</b>.</i></td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">MACDUFF</td>
@@ -1524,7 +1524,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">ROSS</b></i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">ROSS</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1887,7 +1887,7 @@
 									<br/>
 									<span>Put on their instruments. Receive what cheer you may:</span>
 									<br/>
-									<span>The night is long that never finds the day. <i epub:type="z3998:stage-direction">Exeunt</i></span>
+									<span>The night is long that never finds the day. <i epub:type="z3998:stage-direction">Exeunt.</i></span>
 								</p>
 							</td>
 						</tr>
