--- a/src/epub/text/act-5.xhtml
+++ b/src/epub/text/act-5.xhtml
@@ -22,7 +22,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter a <b epub:type="z3998:persona">Doctor</b> of Physic and a <b epub:type="z3998:persona">Waiting-Gentlewoman</b></i>
+								<i epub:type="z3998:stage-direction">Enter a <b epub:type="z3998:persona">Doctor</b> of Physic and a <b epub:type="z3998:persona">Waiting-Gentlewoman</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -52,7 +52,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">LADY MACBETH</b>, with a taper</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">LADY MACBETH</b>, with a taper.</i>
 							</td>
 						</tr>
 						<tr>
@@ -181,7 +181,7 @@
 									<br/>
 									<span>come, come, come, come, give me your hand. What's</span>
 									<br/>
-									<span>done cannot be undone.--To bed, to bed, to bed! <i epub:type="z3998:stage-direction">Exit</i></span>
+									<span>done cannot be undone.--To bed, to bed, to bed! <i epub:type="z3998:stage-direction">Exit.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -219,7 +219,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Gentlewoman</td>
-							<td>Good night, good doctor. <i epub:type="z3998:stage-direction">Exeunt</i></td>
+							<td>Good night, good doctor. <i epub:type="z3998:stage-direction">Exeunt.</i></td>
 						</tr>
 					</tbody>
 				</table>
@@ -235,7 +235,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Drum and colours. Enter <b epub:type="z3998:persona">MENTEITH</b>, <b epub:type="z3998:persona">CAITHNESS</b>, <b epub:type="z3998:persona">ANGUS</b>, <b epub:type="z3998:persona">LENNOX</b>, and Soldiers</i>
+								<i epub:type="z3998:stage-direction">Drum and colours. Enter <b epub:type="z3998:persona">MENTEITH</b>, <b epub:type="z3998:persona">CAITHNESS</b>, <b epub:type="z3998:persona">ANGUS</b>, <b epub:type="z3998:persona">LENNOX</b>, and Soldiers.</i>
 							</td>
 						</tr>
 						<tr>
@@ -360,7 +360,7 @@
 									<br/>
 									<span>To dew the sovereign flower and drown the weeds.</span>
 									<br/>
-									<span>Make we our march towards Birnam. <i epub:type="z3998:stage-direction">Exeunt, marching</i></span>
+									<span>Make we our march towards Birnam. <i epub:type="z3998:stage-direction">Exeunt, marching.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -378,7 +378,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACBETH</b>, Doctor, and Attendants</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACBETH</b>, Doctor, and Attendants.</i>
 							</td>
 						</tr>
 						<tr>
@@ -412,7 +412,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter a <b epub:type="z3998:persona">Servant</b></i>
+								<i epub:type="z3998:stage-direction">Enter a <b epub:type="z3998:persona">Servant</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -459,7 +459,7 @@
 							<td epub:type="z3998:persona">MACBETH</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>Take thy face hence. <i epub:type="z3998:stage-direction">Exit <b epub:type="z3998:persona">Servant</b></i> Seyton!--I am sick at heart,</span>
+									<span>Take thy face hence. <i epub:type="z3998:stage-direction">Exit <b epub:type="z3998:persona">Servant</b>.</i> Seyton!--I am sick at heart,</span>
 									<br/>
 									<span>When I behold--Seyton, I say!--This push</span>
 									<br/>
@@ -484,7 +484,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">SEYTON</b></i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">SEYTON</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -621,9 +621,9 @@
 							<td epub:type="z3998:persona">Doctor</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span><i epub:type="z3998:stage-direction">Aside</i> Were I from Dunsinane away and clear,</span>
+									<span><i epub:type="z3998:stage-direction">Aside.</i> Were I from Dunsinane away and clear,</span>
 									<br/>
-									<span>Profit again should hardly draw me here. <i epub:type="z3998:stage-direction">Exeunt</i></span>
+									<span>Profit again should hardly draw me here. <i epub:type="z3998:stage-direction">Exeunt.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -641,7 +641,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Drum and colours. Enter <b epub:type="z3998:persona">MALCOLM</b>, <b epub:type="z3998:persona">SIWARD</b> and <b epub:type="z3998:persona">YOUNG SIWARD</b>, <b epub:type="z3998:persona">MACDUFF</b>, <b epub:type="z3998:persona">MENTEITH</b>, <b epub:type="z3998:persona">CAITHNESS</b>, <b epub:type="z3998:persona">ANGUS</b>, <b epub:type="z3998:persona">LENNOX</b>, <b epub:type="z3998:persona">ROSS</b>, and <b epub:type="z3998:persona">Soldiers</b>, marching</i>
+								<i epub:type="z3998:stage-direction">Drum and colours. Enter <b epub:type="z3998:persona">MALCOLM</b>, <b epub:type="z3998:persona">SIWARD</b> and <b epub:type="z3998:persona">YOUNG SIWARD</b>, <b epub:type="z3998:persona">MACDUFF</b>, <b epub:type="z3998:persona">MENTEITH</b>, <b epub:type="z3998:persona">CAITHNESS</b>, <b epub:type="z3998:persona">ANGUS</b>, <b epub:type="z3998:persona">LENNOX</b>, <b epub:type="z3998:persona">ROSS</b>, and <b epub:type="z3998:persona">Soldiers</b>, marching.</i>
 							</td>
 						</tr>
 						<tr>
@@ -738,7 +738,7 @@
 									<br/>
 									<span>But certain issue strokes must arbitrate:</span>
 									<br/>
-									<span>Towards which advance the war. <i epub:type="z3998:stage-direction">Exeunt, marching</i></span>
+									<span>Towards which advance the war. <i epub:type="z3998:stage-direction">Exeunt, marching.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -756,7 +756,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACBETH</b>, <b epub:type="z3998:persona">SEYTON</b>, and Soldiers, with drum and colours</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACBETH</b>, <b epub:type="z3998:persona">SEYTON</b>, and Soldiers, with drum and colours.</i>
 							</td>
 						</tr>
 						<tr>
@@ -775,13 +775,13 @@
 									<br/>
 									<span>We might have met them dareful, beard to beard,</span>
 									<br/>
-									<span>And beat them backward home. <i epub:type="z3998:stage-direction">A cry of women within</i> What is that noise?</span>
+									<span>And beat them backward home. <i epub:type="z3998:stage-direction">A cry of women within.</i> What is that noise?</span>
 								</p>
 							</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">SEYTON</td>
-							<td>It is the cry of women, my good lord. <i epub:type="z3998:stage-direction">Exit</i></td>
+							<td>It is the cry of women, my good lord. <i epub:type="z3998:stage-direction">Exit.</i></td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">MACBETH</td>
@@ -806,7 +806,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Re-enter <b epub:type="z3998:persona">SEYTON</b></i>
+								<i epub:type="z3998:stage-direction">Re-enter <b epub:type="z3998:persona">SEYTON</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -850,7 +850,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter a <b epub:type="z3998:persona">Messenger</b></i>
+								<i epub:type="z3998:stage-direction">Enter a <b epub:type="z3998:persona">Messenger</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -933,7 +933,7 @@
 									<br/>
 									<span>Ring the alarum-bell! Blow, wind! come, wrack!</span>
 									<br/>
-									<span>At least we'll die with harness on our back. <i epub:type="z3998:stage-direction">Exeunt</i></span>
+									<span>At least we'll die with harness on our back. <i epub:type="z3998:stage-direction">Exeunt.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -951,7 +951,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Drum and colours. Enter <b epub:type="z3998:persona">MALCOLM</b>, <b epub:type="z3998:persona">SIWARD</b>, <b epub:type="z3998:persona">MACDUFF</b>, and their Army, with boughs</i>
+								<i epub:type="z3998:stage-direction">Drum and colours. Enter <b epub:type="z3998:persona">MALCOLM</b>, <b epub:type="z3998:persona">SIWARD</b>, <b epub:type="z3998:persona">MACDUFF</b>, and their Army, with boughs.</i>
 							</td>
 						</tr>
 						<tr>
@@ -990,7 +990,7 @@
 								<p>
 									<span>Make all our trumpets speak; give them all breath,</span>
 									<br/>
-									<span>Those clamorous harbingers of blood and death. <i epub:type="z3998:stage-direction">Exeunt</i></span>
+									<span>Those clamorous harbingers of blood and death. <i epub:type="z3998:stage-direction">Exeunt.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -1008,7 +1008,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Alarums. Enter <b epub:type="z3998:persona">MACBETH</b></i>
+								<i epub:type="z3998:stage-direction">Alarums. Enter <b epub:type="z3998:persona">MACBETH</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1028,7 +1028,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">YOUNG SIWARD</b></i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">YOUNG SIWARD</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1080,7 +1080,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">They fight and <b epub:type="z3998:persona">YOUNG SIWARD</b> is slain</i>
+								<i epub:type="z3998:stage-direction">They fight and <b epub:type="z3998:persona">YOUNG SIWARD</b> is slain.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1091,14 +1091,14 @@
 									<br/>
 									<span>But swords I smile at, weapons laugh to scorn,</span>
 									<br/>
-									<span>Brandish'd by man that's of a woman born. <i epub:type="z3998:stage-direction">Exit</i></span>
+									<span>Brandish'd by man that's of a woman born. <i epub:type="z3998:stage-direction">Exit.</i></span>
 								</p>
 							</td>
 						</tr>
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Alarums. Enter <b epub:type="z3998:persona">MACDUFF</b></i>
+								<i epub:type="z3998:stage-direction">Alarums. Enter <b epub:type="z3998:persona">MACDUFF</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1123,14 +1123,14 @@
 									<br/>
 									<span>Seems bruited. Let me find him, fortune!</span>
 									<br/>
-									<span>And more I beg not. <i epub:type="z3998:stage-direction">Exit. Alarums</i></span>
+									<span>And more I beg not. <i epub:type="z3998:stage-direction">Exit. Alarums.</i></span>
 								</p>
 							</td>
 						</tr>
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MALCOLM</b> and <b epub:type="z3998:persona">SIWARD</b></i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MALCOLM</b> and <b epub:type="z3998:persona">SIWARD</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1161,7 +1161,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">SIWARD</td>
-							<td>Enter, sir, the castle. <i epub:type="z3998:stage-direction">Exeunt. Alarums</i></td>
+							<td>Enter, sir, the castle. <i epub:type="z3998:stage-direction">Exeunt. Alarums.</i></td>
 						</tr>
 					</tbody>
 				</table>
@@ -1177,7 +1177,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACBETH</b></i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACBETH</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1195,7 +1195,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACDUFF</b></i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACDUFF</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1222,7 +1222,7 @@
 									<br/>
 									<span>My voice is in my sword: thou bloodier villain</span>
 									<br/>
-									<span>Than terms can give thee out! <i epub:type="z3998:stage-direction">They fight</i></span>
+									<span>Than terms can give thee out! <i epub:type="z3998:stage-direction">They fight.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -1310,14 +1310,14 @@
 									<br/>
 									<span>I throw my warlike shield. Lay on, Macduff,</span>
 									<br/>
-									<span>And damn'd be him that first cries, 'Hold, enough!' <i epub:type="z3998:stage-direction">Exeunt, fighting. Alarums</i></span>
+									<span>And damn'd be him that first cries, 'Hold, enough!' <i epub:type="z3998:stage-direction">Exeunt, fighting. Alarums.</i></span>
 								</p>
 							</td>
 						</tr>
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Retreat. Flourish. Enter, with drum and colours, <b epub:type="z3998:persona">MALCOLM</b>, <b epub:type="z3998:persona">SIWARD</b>, <b epub:type="z3998:persona">ROSS</b>, the other Thanes, and Soldiers</i>
+								<i epub:type="z3998:stage-direction">Retreat. Flourish. Enter, with drum and colours, <b epub:type="z3998:persona">MALCOLM</b>, <b epub:type="z3998:persona">SIWARD</b>, <b epub:type="z3998:persona">ROSS</b>, the other Thanes, and Soldiers.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1417,7 +1417,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Re-enter <b epub:type="z3998:persona">MACDUFF</b>, with <b epub:type="z3998:persona">MACBETH's</b> head</i>
+								<i epub:type="z3998:stage-direction">Re-enter <b epub:type="z3998:persona">MACDUFF</b>, with <b epub:type="z3998:persona">MACBETH's</b> head.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1440,7 +1440,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">ALL</td>
-							<td>Hail, King of Scotland! <i epub:type="z3998:stage-direction">Flourish</i></td>
+							<td>Hail, King of Scotland! <i epub:type="z3998:stage-direction">Flourish.</i></td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">MALCOLM</td>
@@ -1476,7 +1476,7 @@
 									<br/>
 									<span>So, thanks to all at once and to each one,</span>
 									<br/>
-									<span>Whom we invite to see us crown'd at Scone. <i epub:type="z3998:stage-direction">Flourish. Exeunt</i></span>
+									<span>Whom we invite to see us crown'd at Scone. <i epub:type="z3998:stage-direction">Flourish. Exeunt.</i></span>
 								</p>
 							</td>
 						</tr>
