--- a/src/epub/text/act-3.xhtml
+++ b/src/epub/text/act-3.xhtml
@@ -22,7 +22,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">BANQUO</b></i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">BANQUO</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -54,7 +54,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Sennet sounded. Enter <b epub:type="z3998:persona">MACBETH</b>, as king, <b epub:type="z3998:persona">LADY MACBETH</b>, as queen, <b epub:type="z3998:persona">LENNOX</b>, <b epub:type="z3998:persona">ROSS</b>, Lords, Ladies, and Attendants</i>
+								<i epub:type="z3998:stage-direction">Sennet sounded. Enter <b epub:type="z3998:persona">MACBETH</b>, as king, <b epub:type="z3998:persona">LADY MACBETH</b>, as queen, <b epub:type="z3998:persona">LENNOX</b>, <b epub:type="z3998:persona">ROSS</b>, Lords, Ladies, and Attendants.</i>
 							</td>
 						</tr>
 						<tr>
@@ -171,7 +171,7 @@
 								<p>
 									<span>I wish your horses swift and sure of foot;</span>
 									<br/>
-									<span>And so I do commend you to their backs. Farewell. <i epub:type="z3998:stage-direction">Exit <b epub:type="z3998:persona">BANQUO</b></i></span>
+									<span>And so I do commend you to their backs. Farewell. <i epub:type="z3998:stage-direction">Exit <b epub:type="z3998:persona">BANQUO</b>.</i></span>
 									<br/>
 									<span>Let every man be master of his time</span>
 									<br/>
@@ -179,7 +179,7 @@
 									<br/>
 									<span>The sweeter welcome, we will keep ourself</span>
 									<br/>
-									<span>Till supper-time alone: while then, God be with you! <i epub:type="z3998:stage-direction">Exeunt all but <b epub:type="z3998:persona">MACBETH</b>, and an attendant</i></span>
+									<span>Till supper-time alone: while then, God be with you! <i epub:type="z3998:stage-direction">Exeunt all but <b epub:type="z3998:persona">MACBETH</b>, and an attendant.</i></span>
 									<br/>
 									<span>Sirrah, a word with you: attend those men</span>
 									<br/>
@@ -195,7 +195,7 @@
 							<td epub:type="z3998:persona">MACBETH</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>Bring them before us. <i epub:type="z3998:stage-direction">Exit Attendant</i></span>
+									<span>Bring them before us. <i epub:type="z3998:stage-direction">Exit Attendant.</i></span>
 									<br/>
 									<span>To be thus is nothing;</span>
 									<br/>
@@ -252,13 +252,13 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Re-enter Attendant, with two <b epub:type="z3998:persona">Murderers</b></i>
+								<i epub:type="z3998:stage-direction">Re-enter Attendant, with two <b epub:type="z3998:persona">Murderers</b>.</i>
 							</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>Now go to the door, and stay there till we call. <i epub:type="z3998:stage-direction">Exit Attendant</i></span>
+									<span>Now go to the door, and stay there till we call. <i epub:type="z3998:stage-direction">Exit Attendant.</i></span>
 									<br/>
 									<span>Was it not yesterday we spoke together?</span>
 								</p>
@@ -486,11 +486,11 @@
 							<td epub:type="z3998:persona">MACBETH</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>I'll call upon you straight: abide within. <i epub:type="z3998:stage-direction">Exeunt <b epub:type="z3998:persona">Murderers</b></i></span>
+									<span>I'll call upon you straight: abide within. <i epub:type="z3998:stage-direction">Exeunt <b epub:type="z3998:persona">Murderers</b>.</i></span>
 									<br/>
 									<span>It is concluded. Banquo, thy soul's flight,</span>
 									<br/>
-									<span>If it find heaven, must find it out to-night. <i epub:type="z3998:stage-direction">Exit</i></span>
+									<span>If it find heaven, must find it out to-night. <i epub:type="z3998:stage-direction">Exit.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -508,7 +508,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">LADY MACBETH</b> and a <b epub:type="z3998:persona">Servant</b></i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">LADY MACBETH</b> and a <b epub:type="z3998:persona">Servant</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -531,7 +531,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Servant</td>
-							<td>Madam, I will. <i epub:type="z3998:stage-direction">Exit</i></td>
+							<td>Madam, I will. <i epub:type="z3998:stage-direction">Exit.</i></td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">LADY MACBETH</td>
@@ -550,7 +550,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACBETH</b></i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACBETH</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -703,7 +703,7 @@
 									<br/>
 									<span>Things bad begun make strong themselves by ill.</span>
 									<br/>
-									<span>So, prithee, go with me. <i epub:type="z3998:stage-direction">Exeunt</i></span>
+									<span>So, prithee, go with me. <i epub:type="z3998:stage-direction">Exeunt.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -721,7 +721,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter three <b epub:type="z3998:persona">Murderers</b></i>
+								<i epub:type="z3998:stage-direction">Enter three <b epub:type="z3998:persona">Murderers</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -766,7 +766,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">BANQUO</td>
-							<td><i epub:type="z3998:stage-direction">Within</i> Give us a light there, ho!</td>
+							<td><i epub:type="z3998:stage-direction">Within.</i> Give us a light there, ho!</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Second Murderer</td>
@@ -803,7 +803,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">BANQUO</b>, and <b epub:type="z3998:persona">FLEANCE</b> with a torch</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">BANQUO</b>, and <b epub:type="z3998:persona">FLEANCE</b> with a torch.</i>
 							</td>
 						</tr>
 						<tr>
@@ -825,7 +825,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">They set upon <b epub:type="z3998:persona">BANQUO</b></i>
+								<i epub:type="z3998:stage-direction">They set upon <b epub:type="z3998:persona">BANQUO</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -834,7 +834,7 @@
 								<p>
 									<span>O, treachery! Fly, good Fleance, fly, fly, fly!</span>
 									<br/>
-									<span>Thou mayst revenge. O slave! <i epub:type="z3998:stage-direction">Dies. <b epub:type="z3998:persona">FLEANCE</b> escapes</i></span>
+									<span>Thou mayst revenge. O slave! <i epub:type="z3998:stage-direction">Dies. <b epub:type="z3998:persona">FLEANCE</b> escapes.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -862,7 +862,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">First Murderer</td>
-							<td>Well, let's away, and say how much is done. <i epub:type="z3998:stage-direction">Exeunt</i></td>
+							<td>Well, let's away, and say how much is done. <i epub:type="z3998:stage-direction">Exeunt.</i></td>
 						</tr>
 					</tbody>
 				</table>
@@ -878,7 +878,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">A banquet prepared. Enter <b epub:type="z3998:persona">MACBETH</b>, <b epub:type="z3998:persona">LADY MACBETH</b>, <b epub:type="z3998:persona">ROSS</b>, <b epub:type="z3998:persona">LENNOX</b>, Lords, and Attendants</i>
+								<i epub:type="z3998:stage-direction">A banquet prepared. Enter <b epub:type="z3998:persona">MACBETH</b>, <b epub:type="z3998:persona">LADY MACBETH</b>, <b epub:type="z3998:persona">ROSS</b>, <b epub:type="z3998:persona">LENNOX</b>, Lords, and Attendants.</i>
 							</td>
 						</tr>
 						<tr>
@@ -922,7 +922,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">First Murderer</b> appears at the door</i>
+								<i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">First Murderer</b> appears at the door.</i>
 							</td>
 						</tr>
 						<tr>
@@ -935,7 +935,7 @@
 									<br/>
 									<span>Be large in mirth; anon we'll drink a measure</span>
 									<br/>
-									<span>The table round. <i epub:type="z3998:stage-direction">Approaching the door</i></span>
+									<span>The table round. <i epub:type="z3998:stage-direction">Approaching the door.</i></span>
 									<br/>
 									<span>There's blood on thy face.</span>
 								</p>
@@ -1021,7 +1021,7 @@
 									<br/>
 									<span>No teeth for the present. Get thee gone: to-morrow</span>
 									<br/>
-									<span>We'll hear, ourselves, again. <i epub:type="z3998:stage-direction">Exit <b epub:type="z3998:persona">Murderer</b></i></span>
+									<span>We'll hear, ourselves, again. <i epub:type="z3998:stage-direction">Exit <b epub:type="z3998:persona">Murderer</b>.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -1062,7 +1062,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">The <b epub:type="z3998:persona">GHOST OF BANQUO</b> enters, and sits in <b epub:type="z3998:persona">MACBETH's</b> place</i>
+								<i epub:type="z3998:stage-direction">The <b epub:type="z3998:persona">GHOST OF BANQUO</b> enters, and sits in <b epub:type="z3998:persona">MACBETH's</b> place.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1202,7 +1202,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">GHOST OF BANQUO</b> vanishes</i>
+								<i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">GHOST OF BANQUO</b> vanishes.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1282,7 +1282,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Re-enter <b epub:type="z3998:persona">GHOST OF BANQUO</b></i>
+								<i epub:type="z3998:stage-direction">Re-enter <b epub:type="z3998:persona">GHOST OF BANQUO</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1338,7 +1338,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">GHOST OF BANQUO</b> vanishes</i>
+								<i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">GHOST OF BANQUO</b> vanishes.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1411,7 +1411,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">LADY MACBETH</td>
-							<td>A kind good night to all! <i epub:type="z3998:stage-direction">Exeunt all but <b epub:type="z3998:persona">MACBETH</b> and <b epub:type="z3998:persona">LADY MACBETH</b></i></td>
+							<td>A kind good night to all! <i epub:type="z3998:stage-direction">Exeunt all but <b epub:type="z3998:persona">MACBETH</b> and <b epub:type="z3998:persona">LADY MACBETH</b>.</i></td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">MACBETH</td>
@@ -1487,7 +1487,7 @@
 									<br/>
 									<span>Is the initiate fear that wants hard use:</span>
 									<br/>
-									<span>We are yet but young in deed. <i epub:type="z3998:stage-direction">Exeunt</i></span>
+									<span>We are yet but young in deed. <i epub:type="z3998:stage-direction">Exeunt.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -1505,7 +1505,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Thunder. Enter the three <b epub:type="z3998:persona">Witches</b> meeting <b epub:type="z3998:persona">HECATE</b></i>
+								<i epub:type="z3998:stage-direction">Thunder. Enter the three <b epub:type="z3998:persona">Witches</b> meeting <b epub:type="z3998:persona">HECATE</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1578,17 +1578,17 @@
 									<br/>
 									<span>And you all know, security</span>
 									<br/>
-									<span>Is mortals' chiefest enemy. <i epub:type="z3998:stage-direction">Music and a song within: 'Come away, come away,' etc</i></span>
+									<span>Is mortals' chiefest enemy. <i epub:type="z3998:stage-direction">Music and a song within: 'Come away, come away,' etc.</i></span>
 									<br/>
 									<span>Hark! I am call'd; my little spirit, see,</span>
 									<br/>
-									<span>Sits in a foggy cloud, and stays for me. <i epub:type="z3998:stage-direction">Exit</i></span>
+									<span>Sits in a foggy cloud, and stays for me. <i epub:type="z3998:stage-direction">Exit.</i></span>
 								</p>
 							</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">First Witch</td>
-							<td>Come, let's make haste; she'll soon be back again. <i epub:type="z3998:stage-direction">Exeunt</i></td>
+							<td>Come, let's make haste; she'll soon be back again. <i epub:type="z3998:stage-direction">Exeunt.</i></td>
 						</tr>
 					</tbody>
 				</table>
@@ -1604,7 +1604,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">LENNOX</b> and another <b epub:type="z3998:persona">Lord</b></i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">LENNOX</b> and another <b epub:type="z3998:persona">Lord</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1743,7 +1743,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Lord</td>
-							<td>I'll send my prayers with him. <i epub:type="z3998:stage-direction">Exeunt</i></td>
+							<td>I'll send my prayers with him. <i epub:type="z3998:stage-direction">Exeunt.</i></td>
 						</tr>
 					</tbody>
 				</table>
